# rit

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
rit_core/: Cargo.toml
rit_core/src/: file.rs  lib.rs  repository.rs
