[package]
name = "cli"
version = "0.1.0"
authors = ["Nikita <nikitadiscore@gmail.com>"]
edition = "2018"
default-run = "rit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rit"
path = "src/main.rs"

[dependencies]
rit_core = { path = "../rit_core" }