[package]
name = "rit_core"
version = "0.1.0"
authors = ["Nikita <nikitadiscore@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
ring = "0.16.19"
data-encoding = "2.3.1"
walkdir = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html